--- a/SentenceMaker.Web/Shared/MainLayout.razor
+++ b/SentenceMaker.Web/Shared/MainLayout.razor
@@ -5,11 +5,11 @@
 </div>
 
 <div class="main">
-    <div class="top-row px-4">
+    @*<div class="top-row px-4">
         <a href="https://www.runninghill.co.za" target="_blank">About</a>
-    </div>
+    </div>*@
 
-    <div class="content px-4">
+    <div class="content px-4 container">
         @Body
     </div>
 </div>
