--- a/SentenceMaker.Web/Pages/SentenceBuilder.razor
+++ b/SentenceMaker.Web/Pages/SentenceBuilder.razor
@@ -1,3 +1,19 @@
 ﻿@page "/sentencebuilder"
 
 <h1>Sentence Maker!</h1>
+
+<div class="row">
+    <div class="col-md-12">
+        <EditForm Model="newSentence" OnValidSubmit="@SaveSentence">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+
+            <span>Editor</span>
+            <div class="section-bck bck-col-2 justify-content-between" style="text-align: right;">
+                <InputTextArea id="name" @bind-Value="newSentence.Content" class="form-control" />
+                <button style="display: inline; text-align: right; margin-top: 8px;" type="submit" class="btn btn-primary">Save Sentence</button>
+            </div>
+        </EditForm>
+        
+    </div>
+</div>
