--- a/SentenceMaker.Web/Pages/SentenceBuilder.razor
+++ b/SentenceMaker.Web/Pages/SentenceBuilder.razor
@@ -8,12 +8,46 @@
             <DataAnnotationsValidator />
             <ValidationSummary />
 
+            <!-- TEXT EDITOR -->
             <span>Editor</span>
-            <div class="section-bck bck-col-2 justify-content-between" style="text-align: right;">
+            <div class="section-bck bck-col-2 justify-content-between" style="text-align: justify;">
                 <InputTextArea id="name" @bind-Value="newSentence.Content" class="form-control" />
-                <button style="display: inline; text-align: right; margin-top: 8px;" type="submit" class="btn btn-primary">Save Sentence</button>
+                @*<div class="col-md-12" style="display: inline; text-align: right;">*@
+                <button style="display: block; align-self: right; margin-top: 8px;" type="submit" class="btn btn-primary">Save Sentence</button>
+                @*</div>*@
             </div>
         </EditForm>
-        
+        @*<div class="col-md-6" style="display: inline; text-align: left;">
+                <button style="display: inline-block; text-align: left; margin-top: 8px;" type="submit" class="btn btn-primary">Word Type</button>
+            </div>*@
+        <div class="col-md-9">
+            <p>Hello World</p>
+        </div>
+        <div class="col-md-9">
+            <span>Word List</span>
+            <div class="section-bck bck-col-3">
+                <div class="list-group">
+                    <a style="display: inline;" href="#" class="list-group-item list-group-item-action active float-left">
+                        Word List
+                        <div style="display: inline; float: right;">
+                            <span style="display: inline-block;">Full Stop (EOS)</span>
+                            <button style="display: inline-block; width: 25px;" id="btnFullStop" runat="server" onserverclick="btnFullStop_ServerClick">.</button>
+                        </div>
+                    </a>
+
+
+
+                    @*<div style="padding: 5px;">
+                            <asp:Repeater ID="lsWords" ItemType="System.String" runat="server">
+                                <ItemTemplate>
+                                    <span>Text</span>
+                                    <button id="btnWord" runat="server" onserverclick="btnWord_Click">@item</button>
+                                </ItemTemplate>
+                            </asp:Repeater>
+                        </div>*@
+                    <a href="#" class="list-group-item list-group-item-action active justify-content-between"># Words: <span class="badge badge-light badge-pill"><span id="lblNumWords" runat="server">0</span></span></a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
